styles.CSS
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

html {
    box-sizing: border-box;
    font-size: 62.5%;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: white;
}
h1{
    font-weight: 600;
    font-size: large;
}

h2 {
    font-weight: 400;
    font-size: small;
}
h3 {
    font-weight: normal;
    font-size: x-small;
}
/* /* HEADER * */

header {
    background-color:white;
    color: black;
    position: relative;
    display: flex;
    justify-content: space-evenly;
    height: 63px;
    padding: 5px;
    align-items: flex-end;
}

h2 img {
    height: 50px;
    width: 50px;
    margin-left: 0px;
    margin-right: 0px;
}

.logo h2 {
    font-weight: bold;

}
nav li {
    list-style-type: none;
    display: inline;
    
}

nav a {
    text-decoration: none;
    color: black;
}
.home_nav {
    padding-right: 5px;
}

.products_nav {
    padding-right: 5px;
}
.about_nav {
    padding-right: 6px;
}

.search_bar {
    background: url("assets/1200px-Google_Magnifying_Glass.svg.png") no-repeat;
    background-position: right;
    background-size: 14px 14px; 
}

/* /* HOME * */

.home {
    background-image: url("assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg");
    background-size: cover;
    color: white;
    height: 375px;
    display: flex;
    justify-content: space-between;
}
.home_text_left {
    margin: 40px;
}
.home_text_right {
    margin: 40px;
    margin-top:250px;
}

/* ABOUT US **/

.about_us {
    margin: 40px;
}

.about_us_container {
    margin-top: 3rem;
    display: grid;
    column-gap: 20px;
    grid-template-columns: 1fr 1fr 2fr;
    grid-template-rows: 1fr 2fr;
    grid-template-areas: 
        'a a b'
        'c d b'
        'c e b'
    }
.top_paragraph {
    grid-area: a;
    height: auto;
}

.about_us_image_right {
    width: 275px;
    height: 400px;
    grid-area: b;
}

 .about_us_image_right img {
    width: 275px;
    height: 400px;
 }

.about_us_image_left {
    width: 200px;
    height: 300px;
    grid-area: c;
}
.about_us_image_left img {
    width: 200px;
    height: 300px;
}
.middle_paragraph {
    grid-area: d;
}

.bottom_paragraph {
    grid-area: e;
}


/* /* PRODUCTS * */

.product_container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    column-gap: 65px;
    row-gap: 70px;
    justify-items: center;
    justify-content: space-around;
    margin: 50px 0px;
    /* margin-right: 30px;
    margin-top: 40px;
    margin */
}
.product_section {
    margin:50px;
}
.product_image {
    /* width: 240px;
    height: 240px; */
    width:100%;
    height:240px;
}

.learn_more_body {
    color: #bf7631;
}

.learn_more_button {
    margin: 10px 0px;
    background-color: white;
    border: none;
    float: left;
}

.product_title {
    width: 50%;
    float:left;
}

.product_price{
    width: 50%;
    float: right;
}


/* /* CONTACT US * */

.contact_us {
    margin: 50px;
}

textarea {
    width: 380px;
    height: 105px;
}
.contact_boxes {
    margin-top: 20px;
    display: grid;
    justify-content: center;
    justify-items: start;
}

input {
    padding-top: 0;
    padding-left: 0;
}
.send_button {
    margin-left: 345px;
    background-color: #bf7631;
    border: none;
    
}
.send_message_button {
    background-color: #bf7631;
    color: white;
    border: none;
    margin-bottom: 5px;
    text-decoration: none;
    font-size: 10px;
}

/* /* FOOTER * */
footer {
    background-color: #bf7631;
    color: black;
    display: flex;
    position: relative;
}

.footer_logo h2 {
    font-weight: bold;
    padding-top:15px;
    vertical-align: middle;
}




/* /* Horizontal Rules * */

.hr_product {
    width: 60%;
    background-color: black;
    height: 4px;
    margin-bottom: 5px;
}

.body_hr {
    width: 50%;
    background-color: black;
    height: 3px;
    
}

.header_hr {
    width: 75%;
    background-color: black;
    height: 3px;
    margin: auto;
}

.add_to_cart_button {
    background-color: #bf7631;
    color: white;
    border: none;
    font-size: 10px;
    margin: 10px 0px;
    float: right;
    padding: 5px 3px;
}
.product_title_price_container{
    padding: 15px 0px;
    margin-bottom: 10px;
}

.logo_image{
    width:50px;
    height:50px;
}
.left_logo_footer{
    padding-left:50px;
}

.right_logo_footer{
    margin-right: 50px;
}

.footer_logo_name{

}

.paragraph_copyright{
    position:absolute;
    right:0;
    bottom: 0;
    padding-right: 10px;
    padding-bottom:10px;
}

